Fix spacings in header

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -38,7 +38,6 @@ div.error {
 .site-header .heading {
     flex: 40;
     color: #ae50d2;
-    line-height: 3;
 }
 
 .site-header .heading form {
